--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </ol>
 
 
-
-            Basic Text Tags
+            <section>
+                <h3>Basic Text Tags</h3>
             <ul>
                 <li><code>p</code> - for paragraph text, usually multiple lines</li>
                 <li><code>em</code> - for text that needs to be emphasized in some way (this adds meaning)</li>
